tests/error/member_from_static.gw
// [contains] 
 class C
{
	int i;
	function static void test() { <<<i>>>; }
}
